grammar.js
        document: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                $.file_version,
                $.plugin,
                $.memory_reservation,
                $.omit_if_no_ref,
                $.node,
                $.dtsi_include,
                $.delete_node,
                $.preproc_include,
                $.preproc_def,
                $.preproc_function_def,
                $.preproc_if,
                $.preproc_ifdef,
                $.preproc_undef
            ),

        _label: ($) => seq(field('label', $.label_identifier), ':'),

        memory_reservation: ($) =>
            seq(
                repeat($._label),
                '/memreserve/',
                field('address', $.integer_literal),
                field('length', $.integer_literal),
                ';'
            ),

        // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
        _node_name: ($) => prec(2, /[0-9a-zA-Z,._+-]+/),
        unit_address: ($) => /[0-9a-zA-Z,._+-]+/,

        reference: ($) => choice($._label_reference, $._node_reference),

        _label_reference: ($) => seq('&', field('label', $.label_identifier)),

        path_node: ($) =>
            seq(
                '/',
                field('name', alias($._node_name, $.identifier)),
                optional(seq('@', field('address', $.unit_address)))
            ),
        path: ($) => repeat1($.path_node),
        _node_reference: ($) => seq('&{', $.path, '}'),

        node: ($) =>
            seq(
                repeat($._label),
                choice(
                    field('name', $.reference),
                    seq(
                        field('name', $.node_identifier),
                        field('address', optional(seq('@', $.unit_address)))
                    )
                ),
                '{',
                repeat($._node_members),
                '}',
                ';'
            ),

        _bits: ($) => seq('/bits/', $.integer_literal),

        property: ($) =>
            seq(
                repeat($._label),
                field('name', $.property_identifier),
                optional(
                    seq(
                        '=',
                        field('bits', optional($._bits)),
                        field('value', commaSep($._property_value))
                    )
                ),
                ';'
            ),

        _node_members: ($) =>
            choice(
                $.delete_property,
                $.delete_node,
                $.omit_if_no_ref,
                $.node,
                $.property,
                $.preproc_include,
                $.preproc_def,
                $.preproc_function_def,
                alias($.preproc_if_in_node, $.preproc_if),
                alias($.preproc_ifdef_in_node, $.preproc_ifdef),
                $.preproc_undef
            ),

        delete_node: ($) =>
            seq(
                token(prec(2, '/delete-node/')),
                choice(
                    field('name', $.reference),
                    seq(
                        field('name', $.node_identifier),
                        field('address', optional(seq('@', $.unit_address)))
                    )
                ),
                ';'
            ),

        delete_property: ($) =>
            seq(
                token(prec(2, '/delete-property/')),
                field('name', $.property_identifier),
                ';'
            ),

        incbin: ($) =>
            seq(
                '/incbin/',
                '(',
                field('filename', $.string_literal),
                optional(
                    seq(
                        ',',
                        field('offset', $._integer_cell_items),
                        ',',
                        field('size', $._integer_cell_items)
                    )
                ),
                ')'
            ),

        // TODO: labels can appear before or after any component of a property value,
        // or between cells of a cell array, or between bytes of a bytestring.
        _property_value: ($) =>
            choice(
                $.integer_cells,
                $.string_literal,
                $.byte_string_literal,
                $.reference,
                $.incbin
            ),

        integer_cells: ($) => seq('<', repeat($._integer_cell_items), '>'),

        _integer_cell_items: ($) =>
            choice(
                $.integer_literal,
                $.reference,
                $.parenthesized_expression,
                $.identifier,
                $.call_expression
            ),

        string_literal: ($) =>
            seq(
                '"',
                repeat(
                    choice(
                        token.immediate(prec(1, /[^\\"\n]+/)),
                        $.escape_sequence
                    )
                ),
                '"'
            ),

        byte_string_literal: ($) => seq('[', repeat($._byte_string_item), ']'),

        _byte_string_item: ($) => /[0-9a-fA-F]+/,

        integer_literal: ($) => {
            const separator = "'";
            const hex = /[0-9a-fA-F]/;
            const decimal = /[0-9]/;
            const hexDigits = seq(
                repeat1(hex),
                repeat(seq(separator, repeat1(hex)))
            );
            const decimalDigits = seq(
                repeat1(decimal),
                repeat(seq(separator, repeat1(decimal)))
            );
            return token(
                choice(
                    decimalDigits,
                    seq('0b', decimalDigits),
                    seq('0x', hexDigits)
                )
            );
        },

        identifier: ($) => /[a-zA-Z_]\w*/,

        _expression: ($) =>
            choice(
                $.conditional_expression,
                $.binary_expression,
                $.unary_expression,
                $.call_expression,
                $.identifier,
                $.integer_literal,
                $.parenthesized_expression
            ),

        call_expression: ($) =>
            prec(
                PREC.CALL,
                seq(
                    field('function', $.identifier),
                    field('arguments', $.argument_list)
                )
            ),

        argument_list: ($) => seq('(', commaSep($._expression), ')'),

        binary_expression: ($) => {
            /** @type {[string, number][]} */
            const table = [
                ['+', PREC.ADD],
                ['-', PREC.ADD],
                ['*', PREC.MULTIPLY],
                ['/', PREC.MULTIPLY],
                ['%', PREC.MULTIPLY],
                ['||', PREC.LOGICAL_OR],
                ['&&', PREC.LOGICAL_AND],
                ['|', PREC.INCLUSIVE_OR],
                ['^', PREC.EXCLUSIVE_OR],
                ['&', PREC.BITWISE_AND],
                ['==', PREC.EQUAL],
                ['!=', PREC.EQUAL],
                ['>', PREC.RELATIONAL],
                ['>=', PREC.RELATIONAL],
                ['<=', PREC.RELATIONAL],
                ['<', PREC.RELATIONAL],
                ['<<', PREC.SHIFT],
                ['>>', PREC.SHIFT],
            ];

            return choice(
                ...table.map(([operator, precedence]) => {
                    return prec.left(
                        precedence,
                        seq(
                            field('left', $._expression),
                            field('operator', operator),
                            field('right', $._expression)
                        )
                    );
                })
            );
        },
