test/corpus/delete.txt

========================================================================
Delete nodes
========================================================================

/ {
    foo: bar {};
    /delete-node/ bar;
    /delete-node/ &foo;
    /delete-node/ baz@12345;
};

---

(document
    (node
        name: (identifier)
        (node
            label: (identifier)
            name: (identifier)
        )
        (delete_node
            name: (identifier))
        (delete_node
            name: (reference label: (identifier)))
        (delete_node
            name: (identifier)
            address: (unit_address))
    )
)

========================================================================
Delete nodes (no spaces)
========================================================================

/ {
    foo: bar {};
    /delete-node/bar;
    /delete-node/&foo;
    /delete-node/baz@12345;
};

---

(document
    (node
        name: (identifier)
        (node
            label: (identifier)
            name: (identifier)
        )
        (delete_node
            name: (identifier))
        (delete_node
            name: (reference label: (identifier)))
        (delete_node
            name: (identifier)
            address: (unit_address))
    )
)

========================================================================
Delete properties
========================================================================

/ {
    baz = "baz";
    /delete-property/ baz;
};

---

(document
    (node
        name: (identifier)
        (property
            name: (identifier)
            value: (string_literal))
        (delete_property
            name: (identifier))
    )
)

========================================================================
Delete properties (no spaces)
========================================================================

/ {
    baz = "baz";
    /delete-property/baz;
};

---

(document
    (node
        name: (identifier)
        (property
            name: (identifier)
            value: (string_literal))
        (delete_property
            name: (identifier))
    )
)
