test/corpus/nodes.txt
========================================================================
Top-level nodes
========================================================================

/ {};

&foo {};

---

(document
    (node name: (identifier))
    (node name: (reference label: (identifier)))
)

========================================================================
Child nodes
========================================================================

/ {
    foo {
        bar {};
    };
    baz {};
};

---

(document
    (node name: (identifier)
        (node name: (identifier)
            (node name: (identifier))
        )
        (node name: (identifier))
    )
)

========================================================================
Node addresses
========================================================================

/ {
    foo@12345678 {};
    bar@deadbeef,abcd1234 {};
    baz@xyz-abc_123+456.789 {};
};

---

(document
    (node name: (identifier)
        (node
            name: (identifier)
            address: (unit_address)
        )
        (node
            name: (identifier)
            address: (unit_address)
        )
        (node
            name: (identifier)
            address: (unit_address)
        )
    )
)

========================================================================
Node with references
========================================================================
/ {
    foo@100 {
        ref = <&{/padctl@7009f000}>;
        ref = <&{/padctl@7009f000/pads/usb2/lanes/usb2-1}>;
    };
};

---

(document
    (node name: (identifier )
        (node
            name: (identifier)
            address: (unit_address)
          (property
            name: (identifier)
            value: (integer_cells (reference
                (path
                    (path_node
                        name: (identifier)
                        address: (unit_address)
                    )
                )
              )
            )
          )
          (property
            name: (identifier)
            value: (integer_cells (reference
                (path
                    (path_node
                        name: (identifier)
                        address: (unit_address)
                    )
                    (path_node
                        name: (identifier)
                    )
                    (path_node
                        name: (identifier)
                    )
                    (path_node
                        name: (identifier)
                    )
                    (path_node
                        name: (identifier)
                    )
                )
              )
            )
          )
        )
    )
)
